kubeflow/multi-user/kustomize/istio/overlays/https-gateway/kf-istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
spec:
  selector:
    istio: $(gatewaySelector)
  servers:
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      #privateKey: /etc/istio/ingressgateway-certs/tls.key
      #serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      credentialName: istio-ingressgateway-certs
